--- a/GROUP PROJECT KFC/index.html
+++ b/GROUP PROJECT KFC/index.html
@@ -17,7 +17,7 @@
                     <a href="#" class="header-logo-company"></a>
                 </div>
                 
-                <a href="#" class="header-logo-basket"></a>
+                <a href="index1.html" class="header-logo-basket"></a>
                 <a href="#" class="header-menu">Меню</a>
                 <a href="#" class="header-restaurants">Рестораны</a>
                 <a href="#" class="header-contacts">Контакты</a>
@@ -25,14 +25,16 @@
                 
             </div>
             <div class="header-image">
-                <div class="header-image-layer-1">
-                    <div class="header-image-layer-2">
-                        <div class="header-image-circle"></div>
-                        <div class="header-image-layer-3"></div>
-                        <div class="header-image-text"></div>
-                        <div class="header-image-line"></div>
+                <a href="index.html" class="header-image-link">
+                    <div class="header-image-layer-1">
+                        <div class="header-image-layer-2">
+                            <div class="header-image-circle"></div>
+                            <div class="header-image-layer-3"></div>
+                            <div class="header-image-text"></div>
+                            <div class="header-image-line"></div>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <span class="delivery-title">Доставка еды от <span class="kjc"><span class="k">К</span><span>Ж</span><span class="k">К</span></span></span>
             <span class="delivery-description">Доставим любое блюдо из сети ресторанов “кентуха жаренная курица”  в любую точку города</span>
