--- a/GROUP PROJECT KFC/index1.html
+++ b/GROUP PROJECT KFC/index1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="shortcut icon" href="../images/site-icon1.png" />
+        <link rel="shortcut icon" href="./images/site-icon1.png" />
         <link href="https://fonts.googleapis.com/css?family=JejuGothic&display=swap" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Kaph&display=swap" rel="stylesheet" />
         <link href="style1.css" rel="stylesheet" />
@@ -59,7 +59,7 @@
                     <tbody>
                         <!-- Пример строки -->
                         <tr>
-                            <td class="item-name"><img src="../images/food1.svg" alt="Куринные ножки" class="first-pos"></td>
+                            <td class="item-name"><img src="./images/food1.svg" alt="Куринные ножки" class="first-pos"></td>
                             <td class="price-label">100 руб.</td>
                             <td class="quantity-label">2</td>
                             <td class="total-label">200 руб.</td>
