--- a/GROUP PROJECT KFC/index.html
+++ b/GROUP PROJECT KFC/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="shortcut icon" href="../images/site-icon1.png" />
+        <link rel="shortcut icon" href="./images/site-icon1.png" />
         <link href="https://fonts.googleapis.com/css?family=JejuGothic&display=swap" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Kaph&display=swap" rel="stylesheet" />
-        <link href="style.css" rel="stylesheet" />
+        <link href="./style.css" rel="stylesheet" />
         <title>Кентуха жаренная курица</title>
     </head>
     <body>
